# SPOVM

./: .gitignore  CMakeLists.txt  README.md
lab01/: main.c  makefile
lab02/: child.c  makefile  parent.c
lab03/: Makefile  child.c  child.h  glob_set.h  lab4.c
lab04/: create_files.sh  main.c  makefile
